--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,15 @@ android {
 
     defaultConfig {
         applicationId "com.example.finalmimofun"
-        minSdk 21
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+
 
     buildTypes {
         release {
@@ -63,11 +65,15 @@ dependencies {
     //for image pic from firebase
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     //for image imput from firebase database
-    implementation 'com.squareup.picasso:picasso:2.8'
-
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //for compress image
 
 
 }
+
+
+
+
+
 apply plugin : 'com.google.gms.google-services'
 apply plugin :'com.android.application'
