--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     //for image imput from firebase database
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //country code picker
+    implementation 'com.hbb20:ccp:2.5.0'
 
 
 
 
 }
-
-
-
 
 
 apply plugin : 'com.google.gms.google-services'
