--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //country code picker
     implementation 'com.hbb20:ccp:2.5.0'
-
-
+    //for image crope
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 
 
 }
