--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //for card view
     implementation 'androidx.cardview:cardview:1.0.0'
-    // for image upload
-    implementation 'com.karumi:dexter:6.2.3'
+
     //image slider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     //for lottie animation
@@ -72,6 +71,13 @@ dependencies {
     implementation 'com.hbb20:ccp:2.5.0'
     //for image crope
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+    //for pdf view
+   // implementation 'com.github.afreakyelf:Pdf-Viewer:1.0.7'
+
+    //for live
+    implementation 'com.github.ZEGOCLOUD:zego_uikit_prebuilt_live_audio_room_android:1.0.0'
+
+
 
 
 }
