--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,20 @@
         android:theme="@style/Theme.FinalMimoFun"
         tools:targetApi="31">
         <activity
+            android:name=".Diamond_send_filal_Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Send_diamondActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Phone_delete_Activity"
             android:exported="false">
             <meta-data
